human_written_tests/WebAssembly/processed_control_flow_validation/test_nop_2.wast
(assert_invalid
  (module (func $type-i64 (result i64) (nop)))
  "type mismatch"
)